Source/WebKit/Platform/spi/mac/AppKitSPI.h
@@ -47,6 +47,10 @@
 - (void)setInspectorBar:(NSInspectorBar *)bar;
 @end
 
+@interface NSWindow (FullScreenSupport)
+@property CGFloat titlebarAlphaValue;
+@end
+
 #endif
 
 @interface NSInspectorBar (IPI)
