Source/WebKit/UIProcess/mac/WKFullScreenWindowController.mm
@@ -29,6 +29,7 @@
 
 #import "WKFullScreenWindowController.h"
 
+#import "AppKitSPI.h"
 #import "LayerTreeContext.h"
 #import "VideoFullscreenManagerProxy.h"
 #import "WKAPICast.h"
@@ -125,6 +126,9 @@ static void makeResponderFirstResponderIfDescendantOfView(NSWindow *window, NSRe
         return nil;
     [window setDelegate:self];
     [window setCollectionBehavior:([window collectionBehavior] | NSWindowCollectionBehaviorFullScreenPrimary)];
+
+    // Hide the titlebar during the animation to full screen so that only the WKWebView content is visible.
+    window.titlebarAlphaValue = 0;
 
     NSView *contentView = [window contentView];
     contentView.hidden = YES;
@@ -341,6 +345,9 @@ static const float minVideoWidth = 480 + 20 + 20; // Note: Keep in sync with med
         NSSize minContentSize = self.window.contentMinSize;
         minContentSize.width = minVideoWidth;
         self.window.contentMinSize = minContentSize;
+
+        // Always show the titlebar in full screen mode.
+        self.window.titlebarAlphaValue = 1;
     } else {
         // Transition to fullscreen failed. Clean up.
         _fullScreenState = NotInFullScreen;
@@ -474,6 +481,9 @@ static RetainPtr<CGImageRef> takeWindowSnapshot(CGSWindowID windowID, bool captu
     } else if (_fullScreenState != ExitingFullScreen)
         return;
     _fullScreenState = NotInFullScreen;
+
+    // Hide the titlebar at the end of the animation so that it can slide away without turning blank.
+    self.window.titlebarAlphaValue = 0;
 
     NSResponder *firstResponder = [[self window] firstResponder];
 
